name:                resourcefetcher
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/resourcefetcher#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2015 Aron Asor
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable resourcefetcher
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       shelly >= 1.6.4,
                       text >= 1.2.1.3,
                       optparse-applicative >= 0.11.0.2
